[package]
authors = ["ostwilkens <carl@ostwilkens.se>"]
edition = "2021"
name = "bevy_web_fullscreen"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
gloo-events = "0.1.2"
web-sys = { version = "0.3.57", features = ["Element", "Document", "Window"] }

[dependencies.bevy]
default-features = false
# version = "0.7.0"
git = "https://github.com/bevyengine/bevy"
rev = "8b27124a801d83a1e92f1136ebd2bc9752c3e9d7"